tests/artifacts/perf/2026-06-05-fft-nd-parallel-qnpl5/cargo_check_axis0_transpose_rch.txt
  [2m2026-06-05T22:06:49.418812Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSelected worker: ts1 at ubuntu@192.168.1.107 (30 slots remaining after reservation, speed 50.0)[0m
    [2;3mat[0m rch/src/hook.rs:514 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:49.719549Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mStarting remote compilation pipeline for frankenscipy (hash: 89a6ab7f74c7b48d)[0m
    [2;3mat[0m rch/src/hook.rs:5987 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:49.719590Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mPrepared dependency sync manifest for 20 roots[0m
    [2;3mat[0m rch/src/hook.rs:6009 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:50.375659Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSyncing project to worker ts1...[0m
    [2;3mat[0m rch/src/hook.rs:6039 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:50.375727Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy -> /data/projects/frankenscipy on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:50.918093Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 542ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:50.918152Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-arrayapi -> /data/projects/frankenscipy/crates/fsci-arrayapi on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:51.143143Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 224ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:51.143190Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-cluster -> /data/projects/frankenscipy/crates/fsci-cluster on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:51.368736Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 225ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:51.368812Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-conformance -> /data/projects/frankenscipy/crates/fsci-conformance on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:51.857932Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 489ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:51.857997Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-constants -> /data/projects/frankenscipy/crates/fsci-constants on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:52.086015Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 228ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:52.086084Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-datasets -> /data/projects/frankenscipy/crates/fsci-datasets on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:52.305215Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 219ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:52.305291Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-fft -> /data/projects/frankenscipy/crates/fsci-fft on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:52.535176Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 229ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:52.535249Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-integrate -> /data/projects/frankenscipy/crates/fsci-integrate on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:52.762946Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 227ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:52.763006Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-interpolate -> /data/projects/frankenscipy/crates/fsci-interpolate on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:52.989712Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 226ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:52.989793Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-io -> /data/projects/frankenscipy/crates/fsci-io on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:53.214278Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 224ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:53.214332Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-linalg -> /data/projects/frankenscipy/crates/fsci-linalg on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:53.434963Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 220ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:53.435028Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-ndimage -> /data/projects/frankenscipy/crates/fsci-ndimage on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:53.660431Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 225ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:53.660506Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-odr -> /data/projects/frankenscipy/crates/fsci-odr on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:53.891848Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 231ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:53.891918Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-opt -> /data/projects/frankenscipy/crates/fsci-opt on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:54.115231Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 223ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:54.115296Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-runtime -> /data/projects/frankenscipy/crates/fsci-runtime on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:54.350944Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 235ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:54.351008Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-signal -> /data/projects/frankenscipy/crates/fsci-signal on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:54.581681Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 230ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:54.581745Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-sparse -> /data/projects/frankenscipy/crates/fsci-sparse on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:54.804157Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 222ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:54.804226Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-spatial -> /data/projects/frankenscipy/crates/fsci-spatial on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:55.026547Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 222ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:55.026615Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-special -> /data/projects/frankenscipy/crates/fsci-special on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:55.252737Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 226ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:55.252821Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-stats -> /data/projects/frankenscipy/crates/fsci-stats on ts1[0m
    [2;3mat[0m rch/src/transfer.rs:1400 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:55.474826Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 221ms[0m
    [2;3mat[0m rch/src/transfer.rs:1469 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:55.474864Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSync complete: 26134 files, 935879 bytes in 5088ms[0m
    [2;3mat[0m rch/src/hook.rs:6202 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:58.805944Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mExecuting command remotely: cargo check -p fsci-fft --all-targets --locked[0m
    [2;3mat[0m rch/src/hook.rs:6240 [2;3mon[0m ThreadId(1)

  [2m2026-06-05T22:06:58.805987Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mRewriting CARGO_TARGET_DIR for remote execution (worker-scoped path): /data/tmp/cargo-target -> /data/projects/frankenscipy/.rch-target-ts1-job-29872254800110541-1780697210375652706-0[0m
    [2;3mat[0m rch/src/transfer.rs:712 [2;3mon[0m ThreadId(1)

Warning: Identity file /home/ubuntu/.ssh/id_rsa not accessible: No such file or directory.
    Updating crates.io index
 Downloading crates ...
  Downloaded arrayvec v0.7.6
  Downloaded bit-set v0.8.0
  Downloaded anes v0.1.6
  Downloaded alloca v0.4.0
  Downloaded autocfg v1.5.0
  Downloaded arrayref v0.3.9
  Downloaded ciborium-ll v0.2.2
  Downloaded cpufeatures v0.3.0
  Downloaded fastrand v2.4.1
  Downloaded cc v1.2.60
  Downloaded find-msvc-tools v0.1.9
  Downloaded crossbeam-epoch v0.9.18
  Downloaded anstyle v1.0.14
  Downloaded crossbeam-utils v0.8.21
  Downloaded clap v4.6.1
  Downloaded unarray v0.1.4
  Downloaded aho-corasick v1.1.4
  Downloaded ciborium v0.2.2
  Downloaded constant_time_eq v0.4.2
  Downloaded tinytemplate v1.2.1
  Downloaded clap_lex v1.1.0
  Downloaded errno v0.3.14
  Downloaded rand_xorshift v0.4.0
  Downloaded wait-timeout v0.2.1
  Downloaded plotters-backend v0.3.7
  Downloaded fnv v1.0.7
  Downloaded same-file v1.0.6
  Downloaded bit-vec v0.8.0
  Downloaded cast v0.3.0
  Downloaded cfg-if v1.0.4
  Downloaded crossbeam-deque v0.8.6
  Downloaded either v1.15.0
  Downloaded ciborium-io v0.2.2
  Downloaded serde_core v1.0.228
  Downloaded bitflags v2.11.1
  Downloaded itoa v1.0.18
  Downloaded criterion-plot v0.8.2
  Downloaded zmij v1.0.21
  Downloaded plotters-svg v0.3.7
  Downloaded proc-macro2 v1.0.106
  Downloaded rand_core v0.9.5
  Downloaded equivalent v1.0.2
  Downloaded page_size v0.6.0
  Downloaded quick-error v1.2.3
  Downloaded oorandom v11.1.5
  Downloaded ppv-lite86 v0.2.21
  Downloaded shlex v1.3.0
  Downloaded rand_chacha v0.9.0
  Downloaded quote v1.0.45
  Downloaded tempfile v3.27.0
  Downloaded rusty-fork v0.3.1
  Downloaded indexmap v2.14.0
  Downloaded getrandom v0.3.4
  Downloaded half v2.7.1
  Downloaded walkdir v2.5.0
  Downloaded once_cell v1.21.4
  Downloaded unicode-ident v1.0.24
  Downloaded num-traits v0.2.19
  Downloaded serde_derive v1.0.228
  Downloaded rayon-core v1.13.0
  Downloaded zerocopy-derive v0.8.48
  Downloaded getrandom v0.4.2
  Downloaded serde v1.0.228
  Downloaded rand v0.9.4
  Downloaded plotters v0.3.7
  Downloaded hashbrown v0.17.0
  Downloaded memchr v2.8.0
  Downloaded itertools v0.13.0
  Downloaded rayon v1.12.0
  Downloaded criterion v0.8.2
  Downloaded serde_json v1.0.149
  Downloaded regex v1.12.3
  Downloaded clap_builder v4.6.0
  Downloaded blake3 v1.8.4
  Downloaded proptest v1.11.0
  Downloaded zerocopy v0.8.48
  Downloaded regex-syntax v0.8.10
  Downloaded syn v2.0.117
  Downloaded rustix v1.1.4
  Downloaded regex-automata v0.4.14
  Downloaded libc v0.2.185
  Downloaded linux-raw-sys v0.12.1
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.45
   Compiling unicode-ident v1.0.24
    Checking cfg-if v1.0.4
   Compiling libc v0.2.185
   Compiling shlex v1.3.0
   Compiling find-msvc-tools v0.1.9
   Compiling serde_core v1.0.228
   Compiling serde v1.0.228
   Compiling zmij v1.0.21
    Checking equivalent v1.0.2
    Checking hashbrown v0.17.0
   Compiling zerocopy v0.8.48
   Compiling serde_json v1.0.149
    Checking memchr v2.8.0
    Checking itoa v1.0.18
   Compiling crossbeam-utils v0.8.21
   Compiling getrandom v0.3.4
    Checking cpufeatures v0.3.0
   Compiling autocfg v1.5.0
    Checking arrayvec v0.7.6
    Checking constant_time_eq v0.4.2
    Checking arrayref v0.3.9
   Compiling getrandom v0.4.2
   Compiling rustix v1.1.4
    Checking regex-syntax v0.8.10
    Checking linux-raw-sys v0.12.1
    Checking either v1.15.0
    Checking bitflags v2.11.1
   Compiling rayon-core v1.13.0
    Checking once_cell v1.21.4
    Checking plotters-backend v0.3.7
    Checking clap_lex v1.1.0
    Checking ciborium-io v0.2.2
    Checking anstyle v1.0.14
    Checking fastrand v2.4.1
    Checking same-file v1.0.6
    Checking bit-vec v0.8.0
    Checking quick-error v1.2.3
    Checking cast v0.3.0
    Checking fnv v1.0.7
    Checking oorandom v11.1.5
    Checking unarray v0.1.4
    Checking anes v0.1.6
   Compiling cc v1.2.60
    Checking itertools v0.13.0
   Compiling num-traits v0.2.19
    Checking plotters-svg v0.3.7
    Checking walkdir v2.5.0
    Checking clap_builder v4.6.0
    Checking bit-set v0.8.0
    Checking indexmap v2.14.0
    Checking crossbeam-epoch v0.9.18
   Compiling syn v2.0.117
    Checking crossbeam-deque v0.8.6
   Compiling blake3 v1.8.4
   Compiling alloca v0.4.0
    Checking plotters v0.3.7
    Checking wait-timeout v0.2.1
    Checking page_size v0.6.0
    Checking rayon v1.12.0
    Checking rand_core v0.9.5
    Checking criterion-plot v0.8.2
    Checking regex-automata v0.4.14
    Checking rand v0.9.4
    Checking rand_xorshift v0.4.0
    Checking clap v4.6.1
    Checking tempfile v3.27.0
    Checking rusty-fork v0.3.1
    Checking regex v1.12.3
   Compiling serde_derive v1.0.228
   Compiling zerocopy-derive v0.8.48
    Checking fsci-runtime v0.1.0 (/data/projects/frankenscipy/crates/fsci-runtime)
    Checking tinytemplate v1.2.1
    Checking fsci-fft v0.1.0 (/data/projects/frankenscipy/crates/fsci-fft)
    Checking half v2.7.1
    Checking ppv-lite86 v0.2.21
    Checking ciborium-ll v0.2.2
    Checking rand_chacha v0.9.0
    Checking ciborium v0.2.2
    Checking proptest v1.11.0
    Checking criterion v0.8.2
error[E0425]: cannot find type `Complex64` in this scope
    --> crates/fsci-fft/src/transforms.rs:3448:21
     |
3448 |         data: &mut [Complex64],
     |                     ^^^^^^^^^ not found in this scope
     |
help: consider importing this type alias through its public re-export
     |
3257 +     use crate::Complex64;
     |

error[E0425]: cannot find function `get_or_compute_twiddles` in this scope
    --> crates/fsci-fft/src/transforms.rs:3457:24
     |
3457 |         let twiddles = get_or_compute_twiddles(axis_len, inverse);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this function
     |
3257 +     use crate::transforms::get_or_compute_twiddles;
     |

error[E0425]: cannot find function `bit_reverse_swaps` in this scope
    --> crates/fsci-fft/src/transforms.rs:3458:33
     |
3458 |         let bit_reverse_swaps = bit_reverse_swaps(axis_len);
     |                                 ^^^^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this function
     |
3257 +     use crate::transforms::bit_reverse_swaps;
     |

error[E0425]: cannot find function `cooley_tukey_radix2_inplace_with_plan` in this scope
    --> crates/fsci-fft/src/transforms.rs:3467:17
     |
3467 |                 cooley_tukey_radix2_inplace_with_plan(
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this function
     |
3257 +     use crate::transforms::cooley_tukey_radix2_inplace_with_plan;
     |

error[E0425]: cannot find type `Complex64` in this scope
    --> crates/fsci-fft/src/transforms.rs:3482:31
     |
3482 |         let mut parallel: Vec<Complex64> = (0..shape.iter().product::<usize>())
     |                               ^^^^^^^^^ not found in this scope
     |
help: consider importing this type alias through its public re-export
     |
3257 +     use crate::Complex64;
     |

error[E0425]: cannot find function `resolve_backend` in this scope
    --> crates/fsci-fft/src/transforms.rs:3490:23
     |
3490 |         let backend = resolve_backend(BackendKind::CooleyTukey);
     |                       ^^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this function
     |
3257 +     use crate::transforms::resolve_backend;
     |

error[E0433]: cannot find type `BackendKind` in this scope
    --> crates/fsci-fft/src/transforms.rs:3490:39
     |
3490 |         let backend = resolve_backend(BackendKind::CooleyTukey);
     |                                       ^^^^^^^^^^^ use of undeclared type `BackendKind`
     |
help: consider importing this enum through its public re-export
     |
3257 +     use crate::BackendKind;
     |

error[E0425]: cannot find function `apply_axis_transform` in this scope
    --> crates/fsci-fft/src/transforms.rs:3492:9
     |
3492 |         apply_axis_transform(backend, &mut parallel, &shape, 0, false, &mut scratch);
     |         ^^^^^^^^^^^^^^^^^^^^ not found in this scope
     |
help: consider importing this function
     |
3257 +     use crate::transforms::apply_axis_transform;
     |

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `fsci-fft` (lib test) due to 8 previous errors
  [2m2026-06-05T22:07:07.990268Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mRemote command finished: exit=101 in 9184ms[0m
    [2;3mat[0m rch/src/hook.rs:6364 [2;3mon[0m ThreadId(1)

[RCH] remote ts1 failed (exit 101)
